# quote-django

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/: models.py  quote_api_test.http  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/views/: liked_quote_list_api_view.py  quote_detail_api_view.py  quote_like_api_view.py  quote_list_api_view.py  random_quote_view.py
quote_django/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
quote_django/settings/: base.py  production.py  test.py
tests/: test_liked_quote_list_api_view.py  test_random_quote_view.py
